--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Run Test
         run: ./gradlew test
 
